# example-crud

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml
main/: CMakeLists.txt
main/src/: App.cpp  Logger.hpp
main/src/controller/: UserController.hpp
main/src/db/: Database.cpp
main/test/: tests.cpp
sql/: 001_init.sql
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  SwaggerComponent.hpp
src/controller/: StaticController.hpp  UserController.hpp
src/db/: Database.cpp  Database.hpp  UserDb.hpp
src/db/model/: User.hpp
src/dto/: PageDto.hpp  StatusDto.hpp  UserDto.hpp
src/service/: UserService.cpp  UserService.hpp
test/: DatabaseTest.cpp  DatabaseTest.hpp  UserControllerTest.cpp  UserControllerTest.hpp  tests.cpp
test/app/: DatabaseTestClient.hpp  TestClient.hpp  TestComponent.hpp  TestDatabaseComponent.hpp
utility/: install-oatpp-modules.sh
